[package]
name = "dt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features=["derive"] }
config = "0.13.1"
serde = "1.0.195"
exitcode = "1.1.2"
chrono = "0.4.31"
shellexpand = "3.1.0"
assert_fs = "1.1.1"
